--- a/apps/pwa/src/styles/nostr/feed.scss
+++ b/apps/pwa/src/styles/nostr/feed.scss
@@ -86,7 +86,7 @@ $feed-animation-speed: 0.2s;
   &__content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    // gap: 1rem;
   }
 
   &__card {
