--- a/apps/pwa/src/styles/nostr/feed.scss
+++ b/apps/pwa/src/styles/nostr/feed.scss
@@ -86,6 +86,13 @@ $feed-animation-speed: 0.2s;
   &__content {
     display: flex;
     flex-direction: column;
+    scrollbar-width: none; // Firefox
+    -ms-overflow-style: none; // IE/Edge
+    font-size: 1rem;
+    
+    &::-webkit-scrollbar {
+      display: none; // Chrome/Safari/Opera
+    }
     // gap: 1rem;
   }
 
