--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -607,3 +607,8 @@ button.sidebar-nav-footer-item {
   }
 }
 
+.dark-mode main {
+  background: var(--background) !important;
+  color: #fff !important;
+}
+
