--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -328,7 +328,7 @@ button.sidebar-nav-footer-item {
   display: flex;
   align-items: center;
   gap: 0.75rem;
-  background-color: var(--shade-50);
+  // background-color: var(--shade-50);
   padding: 0.3rem 1rem;
   border-radius: 3px;
   text-decoration: none;
@@ -581,7 +581,7 @@ button.sidebar-nav-footer-item {
   }
 
   .sidebar-nav-item {
-    background-color: var(--shade-100);
+    // background-color: var(--shade-100);
     margin: 0.5rem 0;
     padding: 0.75rem 1rem;
   }
