--- a/apps/pwa/src/styles/components/_button.scss
+++ b/apps/pwa/src/styles/components/_button.scss
@@ -25,8 +25,10 @@
   color: var(--contrast-50);
   
   &:hover {
-    background-color: var(--blue-700);
-    box-shadow: 0 4px 12px rgba(var(--blue-500), 0.3);
+    // background-color: var(--blue-700);
+    background-color: var(--primary-color-hover);
+    // background-color: linear-gradient(var(--button-primary-color), var(--button-secondary-color));
+    // box-shadow: 0 4px 12px rgba(var(--blue-500), 0.3);
   }
 }
 
@@ -71,6 +73,12 @@
     box-shadow: 0 4px 15px rgba(var(--green-500), 0.4);
   }
 }
+
+
+// .btn-active {
+//   background-color: var(--primary-300);
+//   color: var(--contrast-100);
+// }
 
 // Animated button
 .btn-animated {
