--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -612,3 +612,26 @@ button.sidebar-nav-footer-item {
   color: #fff !important;
 }
 
+
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+} 
+
+@keyframes slideUp {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+} 
