--- a/apps/pwa/src/styles/variables.scss
+++ b/apps/pwa/src/styles/variables.scss
@@ -3,7 +3,8 @@ $sidebar-width: 250px;
 $sidebar-width-right: 30%;
 $mobile-breakpoint: 768px;
 $desktop-breakpoint: 769px;
-$header-height: 60px;
+$header-height: 50px;
+$bottom-height: 50px;
 
 // $button-primary-color: var(--primary-color, var(--primary-500));
 // $button-secondary-color: var(--secondary-color, #64748b);
