--- a/apps/pwa/src/styles/variables.scss
+++ b/apps/pwa/src/styles/variables.scss
@@ -97,6 +97,18 @@ $bottom-height: 50px;
   --purple-800: #6b21a8;
   --purple-900: #581c87;
 
+
+  --gray-50: #f9fafb;
+  --gray-100: #f3f4f6;
+  --gray-200: #e5e7eb;
+  --gray-300: #d1d5db;
+  --gray-400: #9ca3af;
+  --gray-500: #6b7280;
+  --gray-600: #4b5563;
+  --gray-700: #374151;
+  --gray-800: #1f2937;
+  --gray-900: #111827;
+
   // Semantic colors
   // --primary-color: var(--blue-600);
   --primary-color: var(--green-600);
@@ -136,6 +148,18 @@ $bottom-height: 50px;
   --contrast-800: #1e293b;
   --contrast-900: #0f172a;
   --contrast-950: #020617;
+
+
+  --gray-50: #111827;
+  --gray-100: #1f2937;
+  --gray-200: #374151;
+  --gray-300: #4b5563;
+  --gray-400: #6b7280;
+  --gray-500: #9ca3af;
+  --gray-600: #d1d5db;
+  --gray-700: #d3d5d8;
+  --gray-800: #e2dede;
+  --gray-900: #f9fafb;
 }
 
 // Dark mode
@@ -174,6 +198,18 @@ $bottom-height: 50px;
   --danger-color: var(--red-400);
   --warning-color: var(--yellow-400);
   --info-color: var(--blue-400);
+
+
+  --gray-50: #f9fafb;
+  --gray-100: #f3f4f6;
+  --gray-200: #e5e7eb;
+  --gray-300: #d1d5db;
+  --gray-400: #9ca3af;
+  --gray-500: #6b7280;
+  --gray-600: #4b5563;
+  --gray-700: #374151;
+  --gray-800: #1f2937;
+  --gray-900: #111827;
 
   // System colors
   --background: var(--shade-50);
