--- a/apps/pwa/src/styles/variables.scss
+++ b/apps/pwa/src/styles/variables.scss
@@ -1,6 +1,6 @@
 // Basic variables
-$sidebar-width: 250px;
-$sidebar-width-right: 30%;
+$sidebar-width: 200px;
+$sidebar-width-right: 200px;
 $mobile-breakpoint: 768px;
 $desktop-breakpoint: 769px;
 $header-height: 50px;
