--- a/apps/pwa/src/styles/variables.scss
+++ b/apps/pwa/src/styles/variables.scss
@@ -3,6 +3,7 @@ $sidebar-width: 200px;
 $sidebar-width-right: 200px;
 $mobile-breakpoint: 768px;
 $desktop-breakpoint: 769px;
+$tablet-breakpoint: 1024px;
 $header-height: 50px;
 $bottom-height: 50px;
 
