--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -481,7 +481,7 @@ button.sidebar-nav-footer-item {
   background-color: var(--card-bg);
   border-radius: 8px;
   padding: 1.5rem;
-  margin-bottom: 1.5rem;
+  // margin-bottom: 1.5rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   border: 1px solid var(--border);
   transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
