--- a/apps/pwa/src/styles/nostr/feed.scss
+++ b/apps/pwa/src/styles/nostr/feed.scss
@@ -49,7 +49,7 @@ $feed-animation-speed: 0.2s;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     scrollbar-width: none; // Firefox
     -ms-overflow-style: none; // IE/Edge
-    font-size: 1rem;
+    font-size: 0.75rem;
 
     &::-webkit-scrollbar {
       display: none; // Chrome/Safari/Opera
@@ -62,20 +62,21 @@ $feed-animation-speed: 0.2s;
     &-button {
       display: flex;
       align-items: center;
-      padding: 0.5rem 1rem;
+      padding: 0.25rem 0.75rem;
       margin-right: 0.5rem;
       border-radius: 0.375rem;
       white-space: nowrap;
       transition: all 0.2s ease;
-      font-size: 1.75rem;
+      font-size: 1.25rem;
       border: none;
       background: transparent;
       cursor: pointer;
 
       &--active {
-        background-color: var(--primary-400, var(--primary-500));
+        // background-color: var(--primary-400, var(--primary-500));
         // color: var(--primary-color, #3b82f6);
         // color: var(--primary-color, var(--feed-hover));
+        border: 1px solid var(--green-500);
       }
 
       &:not(.nostr-feed__tabs-button--active) {
