Feat/house sprint (#596)
* fix mobile

* wip

* fix

* ui onboard

* wip

* wip

* wip

--- a/apps/pwa/src/styles/nostr/feed.scss
+++ b/apps/pwa/src/styles/nostr/feed.scss
@@ -26,12 +26,15 @@ $feed-animation-speed: 0.2s;
 // Feed SCSS Styles
 .nostr-feed {
   &__container {
+    // justify-content: left;
     width: 100%;
     margin: 0 auto;
     // max-width: 1200px;
   }
 
   &__tags-container {
+    width: 100%;
+    margin: 0 auto;
     scrollbar-width: none; // Firefox
     -ms-overflow-style: none; // IE/Edge
 
@@ -116,6 +119,7 @@ $feed-animation-speed: 0.2s;
     // border-bottom: 1px solid var(--border-color, #e5e7eb);
     // border: 1px 0 0 3px solid var(--border-color, #e5e7eb);
     transition: box-shadow 0.2s ease;
+    // max-width: 500px;
 
     &:hover {
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
@@ -336,6 +340,7 @@ $feed-animation-speed: 0.2s;
 .nostr-short-feed {
   &__container {
     position: relative;
+    // width: calc(100% - $sidebar-width);
     width: 100%;
     height: 100vh;
     overflow-y: scroll;
