--- a/apps/pwa/src/styles/components/_modal.scss
+++ b/apps/pwa/src/styles/components/_modal.scss
@@ -6,7 +6,7 @@
     z-index: 50;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
-    backdrop-filter: blur(2px);
+    // backdrop-filter: blur(2px);
 
     &--visible {
       opacity: 0.7;
@@ -56,7 +56,7 @@
     }
 
     &--visible {
-      transform: scale(1);
+      // transform: scale(1);
       background: var(--gray-800);
       opacity: 1;
     }
