--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -86,6 +86,13 @@ select {
 //   text-wrap: nowrap;
 // }
 
+textarea {
+  color: var(--contrast-900);
+  background-color: var(--background);
+  border: 1px solid var(--border);
+  text-wrap: nowrap;
+}
+
 .icon {
   color: var(--contrast-500);
 }
