--- a/apps/pwa/src/styles/index.scss
+++ b/apps/pwa/src/styles/index.scss
@@ -7,8 +7,8 @@
 @import './nostr/feed.scss';
 @import './components/_cashu-wallet.scss';
 @import './cashu.css';
-@import './components/modal';
-@import './components/toast'; 
+@import './components/modal.scss';
+@import './components/toast.scss'; 
 @import 'quill/dist/quill.snow.css';
 @import 'animations.scss';
 @import 'loading.scss';
