--- a/apps/pwa/src/styles/components/_modal.scss
+++ b/apps/pwa/src/styles/components/_modal.scss
@@ -38,16 +38,18 @@
   }
 
   &__panel {
-    width: 100%;
-    max-width: 28rem;
+    width: calc(100% - 20px);
+    max-width: none;
+    margin-left: 10px;
+    margin-right: 10px;
     transform: scale(0.95);
     opacity: 0;
     transition: all 0.3s ease-in-out;
-    background: var(--background);
+    background: var(--background) !important;
     box-shadow: 0 4px 32px 0 rgba(0,0,0,0.10);
     border-radius: 8px;
     margin: 0 auto;
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 1rem;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
     max-height: calc(100vh - 2rem);
@@ -62,7 +64,7 @@
 
     &--visible {
       // transform: scale(1);
-      background: var(--gray-800);
+      background: var(--background) !important;
       opacity: 1;
     }
 
@@ -78,6 +80,8 @@
       box-shadow: none;
       overflow-x: hidden;
       overflow-y: auto;
+      margin-left: 0;
+      margin-right: 0;
     }
 
     // Size variants
@@ -183,10 +187,14 @@
   }
 
   &__content-container {
-    padding-top: 2rem;
-    background: var(--background);
+    padding-top: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    background: var(--background) !important;
     @media (max-width: 640px) {
-      padding-top: 1rem;
+      padding-top: 0.5rem;
+      padding-left: 0.25rem;
+      padding-right: 0.25rem;
     }
     // background: var(--gray-100);
     // padding: 1.5rem;
