--- a/apps/pwa/src/styles/components/_modal.scss
+++ b/apps/pwa/src/styles/components/_modal.scss
@@ -75,7 +75,7 @@
       min-width: 0;
       height: 80vh;
       max-height: 90vh;
-      border-radius: 0;
+      border-radius: 0.5rem;
       padding: 0;
       box-shadow: none;
       overflow-x: hidden;
